--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,9 +19,16 @@ android {
     }
 }
 
+repositories {
+    mavenCentral()
+}
+
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:22.2.1'
     compile 'com.google.android.gms:play-services:7.5.0'
+    compile 'it.neokree:MaterialNavigationDrawer:1.3.3'
+    compile 'it.neokree:MaterialTabs:0.11'
     compile files('libs/json-simple-1.1.1.jar')
+
 }
