--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         <activity
             android:name=".LoginActivity"
             android:label="@string/title_activity_login"
+            android:theme="@style/McShopLoginTheme"
             android:windowSoftInputMode="adjustResize|stateVisible" >
         </activity>
         <activity
