Improved account managing system

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,15 +33,20 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.kana2011.mcshop.HomeActivity" />
         </activity>
-        <activity android:name="xyz.paphonb.mcshop.shop.ShopDetailActivity"
+        <activity
+            android:name=".shop.ShopDetailActivity"
             android:label="@string/title_activity_shop_detail"
-            android:theme="@style/AppTheme"
-            >
+            android:theme="@style/AppTheme" >
         </activity>
         <activity
             android:name=".HomeActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar" >
+        </activity>
+        <activity
+            android:name=".SelectAccountActivity"
+            android:label="@string/title_activity_select_account"
+            android:theme="@style/AppTheme" >
         </activity>
     </application>
 
